refactor:[server] 暗号化アルゴリズムを変更
